[package]
name = "slowmo-cinema"
version = "0.1.0"
authors = ["Rafael Bachmann <mediumendian@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resize = "0.3.0"
png = "0.15.0"
chrono = "*"
clap = "*"
git2 = "0.9"
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "*"
