[package]
name = "slowmo-cinema"
version = "0.1.0"
authors = ["Rafael Bachmann <mediumendian@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resize = "0.5.5"
png = "0.16.8"
chrono = "0.4.19"
clap = "2.34.0"
git2 = "0.13.25"
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "0.5.0"
